Revise basic scene

--- a/03-basic-scene/index.html
+++ b/03-basic-scene/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>03 - Basic Scene</title>
+    <style>
+        body{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        .webgl{
+            margin-top: 4rem;
+        }
+    </style>
 </head>
 <body>
     <canvas class="webgl"></canvas>
